--- a/flipbook-backend/package.json
+++ b/flipbook-backend/package.json
@@ -1,17 +1,25 @@
 {
   "name": "pdf-flipbook-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend server for BookBuddy PDF Flipbook",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["pdf", "flipbook", "bookbuddy"],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.2.1",
-    "multer": "^2.0.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
