--- a/flipbook-backend/package.json
+++ b/flipbook-backend/package.json
@@ -18,8 +18,9 @@
   "dependencies": {
     "@vercel/blob": "^2.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.22.1",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
