--- a/flipbook-backend/package.json
+++ b/flipbook-backend/package.json
@@ -17,10 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/blob": "^2.0.0",
+    "@vercel/postgres": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.22.1",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
